# curator

./: .gitmodules  LICENSE  README.md  curator
.github/workflows/: release.yml
cli/: pyproject.toml
cli/cli/: iso.py
cli/cli/formats/: xml.py
curator-cli/: pyproject.toml
curator-cli/cli/: iso.py  main.py  version.py
curator-cli/cli/formats/: xml.py
