[tool.poetry]
name = "curator-cli"
version = "0.0.2"
description = ""
authors = ["Hidden Palace <hp@hiddenpalace.org>"]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ps2exe = {path = "../lib/ps2exe", develop = true}

[tool.poetry.scripts]
curator-cli = 'cli.main:main'

[build-system]
requires = [
    "setuptools >= 42.0.0",
    "setuptools_scm >= 2.0.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'