[tool.poetry]
name = "curator-cli"
version = "0.0.3"
description = ""
authors = ["Hidden Palace <hp@hiddenpalace.org>"]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
enlighten = "^1.11.2"
pycdlib = "^1.14.0"
pyisotools = "^2.4.6"
methodtools = "^0.4.7"
pefile = "^2023.2.7"
pycryptodome = "^3.18.0"
libarchive-c = "^4.0"
numpy = "^1.25.0"
pathlab = "^0.2"
xxhash = "^3.2.0"
ps2exe = {path = "../lib/ps2exe", develop = true}
machfs = "^1.3"
pyinstaller = "^5.13.0"

[tool.poetry.scripts]
curator-cli = 'cli.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
